@startuml class_design_outline

class ManagePsdDataOnCoordinate{
    + IntegrateVelocityPsdForRealPsd()
    + GetRealPsd(real_coordinate)
    + SetRealPsd(real_coordinate,value)
    + GetVelocityPsd(real_coordinate,velocity_coordinate)
    + SetVelocityPsd(real_coordinate,velocity_coordinate,value)
}
   

class ManageFieldDataOnCoordinate{


    + GetFieldValue(real_coordinate)
    + SetFieldValue(real_coordinate,value)


}

class StoreDataInMemory{
    
}

class CoordinateSpec{
   
}

class InitializePsd{

}

class InitializeField{

}

class VlasovSolver{

}

class ApplyBoundaryCondition{
    
}

VlasovSolver o-- ManagePsdDataOnCoordinate
VlasovSolver o-- ManageFieldDataOnCoordinate

VlasovSolver o-- ApplyBoundaryCondition

ApplyBoundaryCondition -- ManagePsdDataOnCoordinate

ManagePsdDataOnCoordinate o-- "2" StoreDataInMemory : have psd and real psd >
ManageFieldDataOnCoordinate o-- "1" StoreDataInMemory

ManagePsdDataOnCoordinate o-- "1" CoordinateSpec 
ManageFieldDataOnCoordinate o-- "1" CoordinateSpec

InitializeField -- "1"ManageFieldDataOnCoordinate
InitializePsd -- "1"ManagePsdDataOnCoordinate

VlasovSolver o--InitializePsd
VlasovSolver o--InitializeField

hide members
show ManageFieldDataOnCoordinate method
show ManagePsdDataOnCoordinate method

@enduml